TypedLama/regression/compile_error/test004.3.lama
-- check that logical value should be TConst
fun P(i :: Int) :: Str {
  i.string
}
for i := 0, P(i), i := i+1
do

od;